--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "react-router-dom": "^7.7.1",
     "react-spinners": "^0.17.0",
     "react-toastify": "^11.0.5",
+    "socket.io-client": "^4.8.1",
     "zustand": "^5.0.7"
   },
   "devDependencies": {
